# slatewm

./: .gitignore  CMakeLists.txt  readme.md
lib/: json.h
src/: client_handler.cpp  client_handler.h  event_handler.h  main.cpp  message.cpp  message.h  slate.cpp  slate.h  util.cpp  util.h
src/client/: events.py  handler.py  rc.py  slateclient.py
src/client/util/: __init__.py  general.py  layout.py  message.py  window.py
src/layout/: client.cpp  client.h  tile.cpp  tile.h  workspace.cpp  workspace.h
src/util/: message.cpp  message.h  util.cpp  util.h
